--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+nvidia-graphics-drivers-96 (96.43.19-0ubuntu1) UNRELEASED; urgency=low
+
+  * New upstream release:
+    - Switch to new xsfbs variables to get the server ABI
+      (LP: #616214).
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Sat, 20 Nov 2010 16:10:18 +0100
+
 nvidia-graphics-drivers-96 (96.43.18-0ubuntu1) maverick; urgency=low
 
   * New upstream release:
