--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers-96 (96.43.19-0ubuntu1) UNRELEASED; urgency=low
+nvidia-graphics-drivers-96 (96.43.19-0ubuntu1) maverick-proposed; urgency=low
 
   * New upstream release:
     - Switch to new xsfbs variables to get the server ABI
@@ -7,9 +7,9 @@ nvidia-graphics-drivers-96 (96.43.19-0ubuntu1) UNRELEASED; urgency=low
   * debian/nvidia-96.postinst{.in}:
     - Call dpkg-trigger with "--by-package".
   * debian/dkms/patches/nvidia-2.6.36-ioctl.patch:
-    - Add compatibility with kernel 2.6.36.
+    - Add compatibility with kernel 2.6.3{6|7}.
 
- -- Alberto Milone <alberto.milone@canonical.com>  Sat, 20 Nov 2010 16:58:40 +0100
+ -- Alberto Milone <alberto.milone@canonical.com>  Sat, 20 Nov 2010 17:36:13 +0100
 
 nvidia-graphics-drivers-96 (96.43.18-0ubuntu1) maverick; urgency=low
 
