--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers-96 (96.43.19-0ubuntu2) natty; urgency=low
+
+  * Rebuild the package for Natty (LP: #681208).
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Wed, 01 Dec 2010 10:42:19 +0100
+
 nvidia-graphics-drivers-96 (96.43.19-0ubuntu1) maverick-proposed; urgency=low
 
   * New upstream release:
