--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,18 @@
 nvidia-graphics-drivers-96 (96.43.19-0ubuntu4) UNRELEASED; urgency=low
 
-  * 
+  * debian/nvidia-96.prerm{.in}:
+    - Call dpkg-trigger with --by-package=$PACKAGE_NAME.
+  * Add support for blacklisting card ids from GRUB gfxpayload=keep:
+    - In Natty gfxpayload=keep is set by default so as to provide a framebuffer
+      early in the boot process. Some cards don't play nicely with it, therefore
+      we need to blacklist them in a file. The format is a sequence of lines of
+      the following form:
+        vVENDORdDEVICEsvSUBVENDORsdSUBDEVICEbcBASECLASSscSUBCLASS
+      Blacklist lines are regex-matched against a corresponding PCI ID string.
+      In practice this means that you can replace any part of the ID string
+      with .* to match anything. 
 
- -- Alberto Milone <alberto.milone@canonical.com>  Fri, 07 Jan 2011 13:40:26 +0100
+ -- Alberto Milone <alberto.milone@canonical.com>  Fri, 07 Jan 2011 15:03:34 +0100
 
 nvidia-graphics-drivers-96 (96.43.19-0ubuntu3) natty; urgency=low
 
