--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers-96 (96.43.19-0ubuntu6) UNRELEASED; urgency=low
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Mon, 28 Feb 2011 13:26:26 +0100
+
 nvidia-graphics-drivers-96 (96.43.19-0ubuntu5) natty; urgency=low
 
   * Remove .patch files that were accidentally uploaded.
