Start work on 96.43.19-0ubuntu8

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers-96 (96.43.19-0ubuntu8) UNRELEASED; urgency=low
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Tue, 08 Mar 2011 12:24:12 +0100
+
 nvidia-graphics-drivers-96 (96.43.19-0ubuntu7) natty; urgency=low
 
   [ Andrea Carpineti ]
