--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-nvidia-graphics-drivers-96 (96.43.19-0ubuntu8) UNRELEASED; urgency=low
+nvidia-graphics-drivers-96 (96.43.19-0ubuntu8) natty; urgency=low
 
-  * 
+  * Correct typo in debian/control{.in} again, as the correction
+    was not included in the previous revision (LP: #639955).
 
- -- Alberto Milone <alberto.milone@canonical.com>  Tue, 08 Mar 2011 12:24:12 +0100
+ -- Alberto Milone <alberto.milone@canonical.com>  Tue, 08 Mar 2011 12:35:19 +0100
 
 nvidia-graphics-drivers-96 (96.43.19-0ubuntu7) natty; urgency=low
 
