--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers-96 (96.43.20-0ubuntu1) UNRELEASED; urgency=low
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Fri, 22 Jul 2011 14:54:58 +0200
+
 nvidia-graphics-drivers-96 (96.43.19-0ubuntu8) natty; urgency=low
 
   * Correct typo in debian/control{.in} again, as the correction
