--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers-96 (96.43.20-0ubuntu1~natty2) UNRELEASED; urgency=low
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Mon, 01 Aug 2011 19:12:18 +0200
+
 nvidia-graphics-drivers-96 (96.43.20-0ubuntu1~natty1) natty-proposed; urgency=low
 
   * New upstream release:
