--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers-96 (96.43.20-0ubuntu2) UNRELEASED; urgency=low
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Tue, 02 Aug 2011 13:06:08 +0200
+
 nvidia-graphics-drivers-96 (96.43.20-0ubuntu1) oneiric; urgency=low
 
   * New upstream release:
