--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-nvidia-graphics-drivers-96 (96.43.20-0ubuntu2) UNRELEASED; urgency=low
+nvidia-graphics-drivers-96 (96.43.20-0ubuntu2) oneiric; urgency=low
 
-  * 
+  * Put back in nvidia-2.6.36-ioctl.patch to fix FTBFS.
 
- -- Alberto Milone <alberto.milone@canonical.com>  Tue, 02 Aug 2011 13:06:08 +0200
+ -- Alberto Milone <alberto.milone@canonical.com>  Mon, 01 Aug 2011 19:10:06 +0200
 
 nvidia-graphics-drivers-96 (96.43.20-0ubuntu1) oneiric; urgency=low
 
