--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers-96 (96.43.20-0ubuntu3) UNRELEASED; urgency=low
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Mon, 29 Aug 2011 17:42:20 +0200
+
 nvidia-graphics-drivers-96 (96.43.20-0ubuntu2) oneiric; urgency=low
 
   * Put back in nvidia-2.6.36-ioctl.patch to fix FTBFS.
