--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,16 @@
-nvidia-graphics-drivers-96-updates (96.43.20-0ubuntu2) UNRELEASED; urgency=low
+nvidia-graphics-drivers-96-updates (96.43.20-0ubuntu2) oneiric; urgency=low
 
-  * 
+  * debian/nvidia-96-updates.postinst{.in}:
+    - Make sure to create and use X.Org's multiarch extra modules
+      path (LP: #807209).
+    - Share the same name for grub's blacklist file for all
+      drivers.
+  * debian/rules:
+    - Fix issues with pbuild.
+    - Do not provide the X abi any longer. Depending on the ABI is
+      enough.
 
- -- Alberto Milone <alberto.milone@canonical.com>  Tue, 30 Aug 2011 17:02:28 +0200
+ -- Alberto Milone <alberto.milone@canonical.com>  Tue, 30 Aug 2011 17:29:26 +0200
 
 nvidia-graphics-drivers-96-updates (96.43.20-0ubuntu1) oneiric; urgency=low
 
