--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers-96-updates (96.43.20-0ubuntu3) UNRELEASED; urgency=low
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Wed, 07 Sep 2011 17:20:02 +0200
+
 nvidia-graphics-drivers-96-updates (96.43.20-0ubuntu2) oneiric; urgency=low
 
   * debian/nvidia-96-updates.postinst{.in}:
