--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers-96-updates (96.43.20-0ubuntu4) UNRELEASED; urgency=low
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Fri, 30 Sep 2011 10:52:55 +0200
+
 nvidia-graphics-drivers-96-updates (96.43.20-0ubuntu3) oneiric; urgency=low
 
   * debian/rules:
